Changed title to be more descriptive

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -2,7 +2,7 @@
 <html lang="en-US"> <!-- Language we're using -->
 
 	<head>
-		<title>About</title>
+		<title>Tria - About</title>
 		<link rel="stylesheet" type="text/css" href="..\CSS\about.css"> <!-- Link appropriate docs -->
 	</head>
 
