Added quotes in img src

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -11,7 +11,7 @@
 			<p style="display: inline;">About Us</p>
 		</div>
 		<div id="poisonCiderImage">
-			<img src="..\Images\png\starOceanPoisonCider.png" alt="Poison Cider">
+			<img src="../Images/png/starOceanPoisonCider.png" alt="Poison Cider">
 
 			<div id="aboutUsText">
 				<p class="AboutUsText" style="display: inline; text-align: top;">
