--- a/index.html
+++ b/index.html
@@ -1,65 +1,63 @@
-<!DOCTYPE html> <!-- What type of doc is it -->
-<html lang="en-US"> <!-- Language we're using -->
+<!DOCTYPE html>
+<html lang="en-US">
 
-	<head>
-		<title>Tria - Home</title> <!-- Tria is based off Tri-ace and the goddess of creation in SO -->
-		<link rel="stylesheet" type="text/css" href="CSS\home.css"> <!-- Link appropriate docs -->
-	</head>
+<head>
+	<title>Tria - Home</title> <!-- Tria is based off Tri-ace and the goddess of creation in SO -->
+	<link rel="stylesheet" type="text/css" href="CSS\home.css"> <!-- Link appropriate docs -->
 
-	<body>
+	<meta charset="UTF-8">
+	<meta name="description" content="Tria Cafe Home Page">
+	<meta name="keywords" content="Star, Ocean, Restaurant, Tria, Cafe">
+	<meta name="author" content="Jonathan Renn">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+	<div class="OuterContainer">
 		<!-- Welcome text -->
 		<div id="welcomeMessage" class="Glow">
-			<p style="display: inline;"
-				title="The slight glow on our welcome text is a reference to the box art for SO3!">
-					Welcome to the Tria Cafe!
-			</p>
+			<span title="The slight glow on our welcome text is a reference to the box art for SO3!">
+				Welcome to the Tria Cafe!
+			</span>
 		</div>
-			<div id="about">
-				<a href="HTML\about.html" target="_blank" title="This link will take you to our about page!">About</a>
-			</div>
-			<div id="menu">
-				<a href="HTML\menu.html" target="_blank" title="This link will take you to our restaurant menu!">Menu</a>
-			</div>
-			<div id="nutritionFacts">
-				<a href="HTML\nutritionFacts.html" target="_blank"
-				title="This link will take you to our nutrition facts page! Which contains various information about the nutritional value of our food.">
-					Nutrition Facts
-				</a>
-			</div>
+		<div id="about">
+			<a href="HTML\about.html" target="_blank" title="This link will take you to our about page!">About</a>
+		</div>
+		<div id="menu">
+			<a href="HTML\menu.html" target="_blank" title="This link will take you to our restaurant menu!">Menu</a>
+		</div>
+		<div id="nutritionFacts">
+			<a href="HTML\nutritionFacts.html" target="_blank" title="This link will take you to our nutrition facts page! Which contains various information about the nutritional value of our food.">
+				Nutrition Facts
+			</a>
+		</div>
 		<div id="starOceanAndTriace">
 			<a href="https://starocean.fandom.com/wiki/Star_Ocean_Wiki" target="_blank">
-				<img class= "StarOceanLogo" src="Images\png\starOceanLogo.png"
-				alt="Star Ocean" title="This link takes you to the Star Ocean Wiki!">
+				<img class="StarOceanLogo" src="Images\png\starOceanLogo.png" alt="Star Ocean" title="This link takes you to the Star Ocean Wiki!">
 			</a>
 			<a href="https://www.tri-ace.co.jp/en/" target="_blank">
-				<img class="TriAceLogo" src="Images\png\triAceLogo.png" alt="Tri-Ace"
-				title="This link takes you to the website for the company Tri-Ace. The devlopers of the Star Ocean series!">
+				<img class="TriAceLogo" src="Images\png\triAceLogo.png" alt="Tri-Ace" title="This link takes you to the website for the company Tri-Ace. The devlopers of the Star Ocean series!">
 			</a>
 		</div>
 		<div id="facebookLogo">
 			<a href="">
-				<img class="FacebookLogo" src="Images\png\facebookLogo.png" alt="Facebook"
-				title="This link takes you to our Facebook page!">
+				<img class="FacebookLogo" src="Images\png\facebookLogo.png" alt="Facebook" title="This link takes you to our Facebook page!">
 			</a>
 		</div>
 		<div id="twitterLogo">
 			<a href="">
-				<img class="TwitterLogo" src="Images\png\twitterLogo.png" alt="Twitter"
-				title="This link takes you to our Twitter account!">
+				<img class="TwitterLogo" src="Images\png\twitterLogo.png" alt="Twitter" title="This link takes you to our Twitter account!">
 			</a>
 		</div>
 		<div id="youtubeLogo">
 			<a href="">
-				<img class="YoutubeLogo" src="Images\png\youtubeLogo.png" alt="Youtube"
-				title="This link takes you to our Youtube channel!">
+				<img class="YoutubeLogo" src="Images\png\youtubeLogo.png" alt="Youtube" title="This link takes you to our Youtube channel!">
 			</a>
 		</div>
 
 		<div id="welchVineyard">
-			<img class="WelchVineyard" src="Images\png\welchVineyard.png"
-			alt="This is our mascot, famous creator, Welch Vineyard!"
-			title="This is our mascot, famous creator, Welch Vineyard!">
+			<img class="WelchVineyard" src="Images\png\welchVineyard.png" alt="This is our mascot, famous creator, Welch Vineyard!" title="This is our mascot, famous creator, Welch Vineyard!">
 		</div>
+</body>
 
-	</body>
 </html>
