Added navigation bar and cleaned up comments

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,27 +1,50 @@
-<!DOCTYPE html> <!-- What type of doc is it -->
-<html lang="en-US"> <!-- Language we're using -->
+<!DOCTYPE html>
+<html lang="en-US">
 
-	<head>
-		<title>Tria - About</title>
-		<link rel="stylesheet" type="text/css" href="..\CSS\about.css"> <!-- Link appropriate docs -->
-	</head>
+<head>
+	<title>Tria Cafe - About</title>
+	<link rel="stylesheet" type="text/css" href="..\CSS\about.css">
+</head>
 
-	<body>
-		<div id="aboutUsBackground">
-			<p style="display: inline;">About Us</p>
+<body>
+	<div id="aboutUsBackground">
+		<span>About Us</span>
+	</div>
+	<div id="poisonCiderImage">
+		<img src="../Images/png/starOceanPoisonCider.png" alt="Poison Cider">
+		<div id="aboutUsText">
+			<p class="AboutUsText">
+				We are the Tria Cafe! A dedicated group of Star Ocean fans who want want to share our
+				love of the series with you!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+				How? Through your stomach of course!<br /><br />
+			</p>
 		</div>
-		<div id="poisonCiderImage">
-			<img src="../Images/png/starOceanPoisonCider.png" alt="Poison Cider">
+	</div>
+	<div>
+		<ul id="MainNav">
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="menu.html">Menu</a></li>
+			<li><a href="nutritionFacts.html">Nutrition Facts</a></li>
+			<li><a href="menuBuyForm.html">Buy Now</a></li>
+			<li><a href=""><img src="../Images/png/facebookLogo.png" style="width: 50px; height: 30px;"/></a></li>
+			<li><a href=""><img src="../Images/png/twitterLogo.png" style="width: 50px; height: 30px;"/></a></li>
+			<li><a href=""><img src="../Images/png/youtubeLogo.png" style="width: 50px; height: 30px;"/></a></li>
+			<li><a href=""><img src="../Images/png/starOceanLogo.png" style="width: 100px; height: 30px;"/></a></li>
+			<li><a href=""><img src="../Images/png/triAceLogo.png" style="width: 100px; height: 30px;"/></a></li>
+			<li><p class="CopyrightText">© Copyright 2020 Tria Cafe. All Rights Reserved</p></li>
+		</ul>
+	</div>
+</body>
 
-			<div id="aboutUsText">
-				<p class="AboutUsText" style="display: inline; text-align: top;">
-					We are the Tria Cafe! A dedicated group of Star Ocean fans who want want to share our
-					love of the series with you! <br /><br />
-					How? Through your stomach of course!
-				</p>
-			</div>
-		</div>
-		<div id="aboutMenuText">
-		</div>
-	</body>
 </html>
